--- a/WeatherCheck/Info.plist
+++ b/WeatherCheck/Info.plist
@@ -60,5 +60,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app uses your location to find the current temperature and weather.</string>
 </dict>
 </plist>
