Removed print statements. Added some comments.

--- a/WeatherCheck/Info.plist
+++ b/WeatherCheck/Info.plist
@@ -62,5 +62,7 @@
 	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This app uses your location to find the current temperature and weather.</string>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 </dict>
 </plist>
